<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="120dp"
    android:layout_marginBottom="120dp"
    android:layout_marginLeft="80dp"
    android:layout_marginRight="80dp"
    android:orientation="vertical"
    tools:context=".LoginAs">

    <TextView
        android:id="@+id/LoginAsText_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginAsText_1"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/LoginAsBtn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg_oval"
        android:hint="@string/loginAsBtn_1"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/LoginAsBtn_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg_oval"
        android:hint="@string/loginAsBtn_2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/LoginAsText_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginAsText_2" />

        <TextView
            android:id="@+id/LoginAsText_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginAsText_3"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorBlue"
            android:layout_toRightOf="@id/LoginAsText_2"
            android:layout_toEndOf="@id/LoginAsText_2" />

    </RelativeLayout>
</LinearLayout>